# projet_comm-IHM

./: CMakeLists.txt  README.md  comm.cpp  comm.h  donnee.cpp  donnee.h  main.cpp  test.json
header/: comm.h  donnee.h
other/: copy past file  projet_comm.ilk  rotation.cpp  test.json
sources/: main.cpp
sources/header/: comm.h  donnee.h  gestion.h  structureDonnee.h
sources/other/: copy past file  test.json
sources/src/: comm.cpp  donnee.cpp  gestion.cpp
src/: comm.cpp  donnee.cpp
